fixed spacing in main html

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,20 +10,20 @@
 
 .hero {
     position: relative;
-    display: flex; 
-    justify-content: center;    
-    align-items: center; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero-bg {
-    background-image: url('/images/family_at_hospital.jpg'); 
+    background-image: url('/images/family_at_hospital.jpg');
     background-size: cover;
     background-position: center;
     position: absolute;
     top: 0;
     left: 0;
-    width: 80%; 
-    max-width: 800px; 
+    width: 80%;
+    max-width: 800px;
     height: 100%;
     z-index: -1;
     border-radius: 12px;
@@ -274,7 +274,7 @@ h2 {
     font-size: 2em;
 }
 
-p{
+p {
     color: #111827;
 }
 
@@ -653,4 +653,11 @@ footer {
     background-color: rgb(123, 134, 140);
     transform: scale(1.02);
     transition: background-color 0.3s, transform 0.2s;
+}
+
+
+/* main html */
+#dependants,
+#welcome_message {
+    margin-left: 1%;
 }
